Updated title, added heading and unordered list.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Adelaide</title>
   </head>
   <body>
+    <h1>Hello, Code School!</h1>
 
     Hello, my name is Adelaide.
+
+    <ul>
+      <li>Projects</li>
+      <li>Python</li>
+      <li>HTML and CSS</li>
+    </ul>
 
   </body>
 </html>
